@@ -80,4 +80,5 @@
    9-Dec-2024  - V0.83 Update Azure pipelines to use latest macOS, Ubuntu, and python 3.10
    5-Jun-2025  - V0.84 Update CARDTargetProvider and CARDTargetAnnotationProvider to handle/skip cases missing "AMR Gene Family" term
   28-Jul-2025  - V0.85 Update URL to Pharos download data
+   3-Sep-2025  - V0.86 Update IMGTTargetProvider to fail upon download failure
    
